--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Real Time Chat Application</title>
+    <link rel="stylesheet" href="chat.css">
 </head>
 <body>
-    This is html
+    <div class="app">
+        <div class="screen join-screen active">
+            <div class="form">
+                 <h2>Join ChitChat</h2>
+                 <div class="form-input">
+                      <label for="name">Username</label>
+                      <input type="text" id="name" required>
+                 </div>
+                 <div class="form-input">
+                 <button id="join-user">Join</button>
+                 </div>
+            </div>     
+        </div>
+         <div class="screen chat-screen">
+            <div class="header">
+                <div class="logo">Real Time Chat App</div>
+                <button id="exit-chat">Exit</button>
+            </div>
+            <div class="messages">
+                <div class="message my-message">
+                    <div>
+                        <div class="name">You</div>
+                        <div class="text">Hi</div>
+                    </div>
+                </div>
+                <div class="update">
+                    ABC is joined the conversation
+                </div>
+                <div class="message other-message">
+                    <div>
+                        <div class="name">ABC</div>
+                        <div class="text">Hi</div>
+                    </div>
+                </div>
+            </div>
+            <div class="typebox">
+                <input type="text" id="message-input" placeholder="Type a message...">
+                <button id="send-message">Send</button>
+            </div>
+         </div>
+        
+    </div>
+
+    <script type="text/javascript" src="socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="chat.js"></script>
+   
 </body>
 </html>
