Add java Script

--- a/public/index.html
+++ b/public/index.html
@@ -12,35 +12,21 @@
             <div class="form">
                  <h2>Join ChitChat</h2>
                  <div class="form-input">
-                      <label for="name">Username</label>
-                      <input type="text" id="name" required>
+                      <label for="username">Username</label>
+                      <input type="text" id="username" required>
                  </div>
                  <div class="form-input">
                  <button id="join-user">Join</button>
                  </div>
             </div>     
         </div>
-         <div class="screen chat-screen">
+         <div class="screen chat-screen ">
             <div class="header">
                 <div class="logo">Real Time Chat App</div>
                 <button id="exit-chat">Exit</button>
             </div>
             <div class="messages">
-                <div class="message my-message">
-                    <div>
-                        <div class="name">You</div>
-                        <div class="text">Hi</div>
-                    </div>
-                </div>
-                <div class="update">
-                    ABC is joined the conversation
-                </div>
-                <div class="message other-message">
-                    <div>
-                        <div class="name">ABC</div>
-                        <div class="text">Hi</div>
-                    </div>
-                </div>
+               
             </div>
             <div class="typebox">
                 <input type="text" id="message-input" placeholder="Type a message...">
